# global-components

./: .stylefilter  global-components.cmake
components/BenchUtiliz/: BenchUtiliz.camkes  CMakeLists.txt
components/BenchUtiliz/camkes-include/: camkes-BenchUtiliz.h
components/BenchUtiliz/src/: benchUtiliz.c  dump_profile.c
components/Ethdriver/: CMakeLists.txt
components/modules/lwip-base/: CMakeLists.txt  lwip-init.c
components/modules/lwip-base/camkes-include/: camkes-lwip-base.h
components/modules/lwip-base/templates/: lwip-init.template.c
components/modules/single-threaded/camkes-include/: camkes-single-threaded.h
components/modules/x86-iospace-dma/templates/: x86-iospace-dma.template.c
interfaces/: global-connectors.camkes
remote-drivers/lwip-ethernet-async/: CMakeLists.txt  client.c  server.c
remote-drivers/lwip-ethernet-async/camkes-include/: camkes-lwip-ethernet-async.h  lwip-ethernet-async-control.idl4  lwip-ethernet-async.camkes
remote-drivers/lwip-ethernet-async/include/: lwip-ethernet-async.h
remote-drivers/lwip-ethernet-async/templates/: lwip-ethernet-async-client-init.template.c  lwip-ethernet-async-server-init.template.c
remote-drivers/lwip-socket-sync/: CMakeLists.txt
remote-drivers/lwip-socket-sync/camkes-include/: camkes-lwip-socket-sync.h  lwip-socket-sync.camkes
remote-drivers/lwip-socket-sync/client_include/: CMakeLists.txt  lwipserver.h
remote-drivers/lwip-socket-sync/include/: lwip-socket-sync.h
remote-drivers/lwip-socket-sync/server/: server.c
remote-drivers/lwip-socket-sync/templates/: lwip-socket-sync-server-init.template.c
remote-drivers/picotcp-ethernet-async/: client.c  server.c
remote-drivers/picotcp-socket-sync/server/: server.c
templates/: seL4MessageQueue-from.template.c  seL4MessageQueue-to.template.c  seL4SingleThreadedComponent.template.c  seL4SingleThreadedComponent.template.h  seL4VirtQueues-from.template.c
